Feature: Date_utils

--- a/public/asset/css/color.css
+++ b/public/asset/css/color.css
@@ -14,7 +14,7 @@
     COR MEDIA
      */
 
-    --medium_color_light: #fcfeff;
+    --medium_color_light: #f5f7f8;
     --medium_color: #f3f4f6;
     --medium_color_dark: #eaeaec;
     --medium_color_dark_variation_01: #dddde0;
