--- a/public/asset/css/main.css
+++ b/public/asset/css/main.css
@@ -47,6 +47,30 @@ body {
     margin-bottom: 50px;
 }
 
+.margin_right_5 {
+    margin-right: 5px;
+}
+
+.margin_right_10 {
+    margin-right: 10px;
+}
+
+.margin_right_15 {
+    margin-right: 15px;
+}
+
+.margin_left_5 {
+    margin-left: 5px;
+}
+
+.margin_left_10 {
+    margin-left: 10px;
+}
+
+.margin_left_15 {
+    margin-left: 15px;
+}
+
 .centralize {
     margin-left: auto;
     margin-right: auto;
